NLP TP's/texts/robotics/robotics.stackexchange_0000069913.txt
Q:

ros2 rttest example build error

hi,
i try to use https://github.com/ros2/rttest , but when i want to build the examples, it returns errors when running make:
rttest/build/include/rttest/rttest.h:29:21: error: expected ‘:’, ‘,’, ‘;’, ‘}’ or ‘__attribute__’ before ‘=’ token
   size_t iterations = 0,
                     ^

and some other lines with the same style of error ? in rttest.h is a struct, with the first entry with the line of above error ?
including stddef.h or changing size_t to unsigned int, doesnt change anything from the style of error ?
thanks for help
flo

Originally posted by inflo on ROS Answers with karma: 406 on 2015-10-10
Post score: 0

A:

Seeing as ROS2 is currently only in Alpha status, I recommend you report this directly on the rttest issue tracker.

Originally posted by gvdhoorn with karma: 86574 on 2015-10-11
This answer was ACCEPTED on the original site
Post score: 0

